[gd_scene load_steps=5 format=3 uid="uid://b141qasjqe26u"]

[ext_resource type="Script" path="res://Scripts/UI/message_page_controller.gd" id="1_xj5fn"]
[ext_resource type="PackedScene" uid="uid://dlnsn36tkiegg" path="res://Scenes/UI/message_page.tscn" id="2_xj5yt"]
[ext_resource type="PackedScene" uid="uid://c5fofuriguagu" path="res://Scenes/UI/message_received_page.tscn" id="3_nl5ea"]
[ext_resource type="PackedScene" uid="uid://cnvgsrutb5487" path="res://Scenes/UI/message_response_page.tscn" id="4_dexn5"]

[node name="MessagePageController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_xj5fn")

[node name="MessagePage" parent="." instance=ExtResource("2_xj5yt")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="MessagesReceivedPage" parent="." instance=ExtResource("3_nl5ea")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="MessageResponsePage" parent="." instance=ExtResource("4_dexn5")]
unique_name_in_owner = true
visible = false
layout_mode = 1
